# Cprep

./: CMakeLists.txt  README.md  main.cpp
arithmetics/: arithmetics.h  arithmetics1.cpp  arithmetics2.cpp  arithmetics3.cpp  arithmetics4.cpp  arithmetics5.cpp  arithmetics_tasks.cpp  arithmetics_tasks_0-10.cpp  arithmetics_tasks_10-20.cpp
pointers/: pointers.h  pointers2.cpp  pointers3.cpp  pointers_tasks.cpp  task1.cpp
