cmake_minimum_required(VERSION 3.30)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        pointers/pointers1.cpp
        pointers/pointers.h
        pointers/pointers2.cpp
        arithmetics/arithmetics.h
        arithmetics/arithmetics1.cpp
        arithmetics/arithmetics2.cpp
        pointers/pointers3.cpp
        arithmetics/arithmetics3.cpp)
