cmake_minimum_required(VERSION 3.30)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        pointers/pointers1.cpp
        pointers/pointers.h
        pointers/pointers2.cpp
        arithmetics/arithmetics.h
        pointers/pointers3.cpp
        arithmetics/arithmetics_tasks.cpp
        pointers/pointers_tasks.cpp)
